Added the changes

--- a/Group3/Amiani.html
+++ b/Group3/Amiani.html
@@ -1,4 +1,4 @@
-<!Doctype <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Amiani</title>
@@ -8,5 +8,6 @@
     </head>
     <body>
     Kamilimu Github Session
+    Thank you Allan for the correction.
     </body>
 </html>
